Fixed speaker image bug

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 
                     <div class="item">
                       <div class="thumbnail">
-                          <img src="img/speakers/agarwal.jpg" alt="..." class="img-circle team-img">
+                          <img src="img/speakers/agarwal.JPG" alt="..." class="img-circle team-img">
                           <div class="caption">
                               <h3>Anant Agarwal</h3>
                               <p>CEO, edX</p>
