--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
             <!--<li><a href="#tf-testimonials" class="page-scroll">Testimonials</a></li>-->
             <!-- <li><a href="https://ignitestem.typeform.com/to/G0jkFl" target="_blank">Register Now</a></li> -->
             
+            <li><a href="https://hackathons.hackinabox.tech/" target="_blank" class="page-scroll">Hack-In-A-Box</a></li>
             <li><a href="mailto:mdijkgraaf@princeton.edu" class="page-scroll">Contact</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
@@ -98,7 +99,7 @@
             <strong>Maker Faires</strong> and <strong>Design Thinking</strong>
             to your students.
           </p>
-          <p class="lead"><a class="btn btn-danger btn-lg" href="https://docs.google.com/a/princeton.edu/forms/d/e/1FAIpQLSfTWgXj5gfN6cdT54a1YcZfgaThE5hp8XvezUfFuV4toC81ZA/viewform" role="button">Register for IgniteSTEM 2018 on 4/13/18</a></p>
+          <p class="lead"><a class="btn btn-danger btn-lg" href="http://tinyurl.com/ignitestem18" role="button">Register for IgniteSTEM 2018 on 4/13/18</a></p>
 
           <a class="btn btn-danger" href="http://ignitestem.org/schedule.pdf" role="button">Schedule 2017</a>
           <!-- <a class="btn btn-danger" href="http://ignitestem.org/map.pdf" role="button">Map</a>
