Registration opens new tab

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <strong>Maker Faires</strong> and <strong>Design Thinking</strong>
             to your students.
           </p>
-          <p class="lead"><a class="btn btn-danger btn-lg" href="http://tinyurl.com/ignitestem18" role="button">Register for IgniteSTEM 2018 on 4/13/18</a></p>
+          <p class="lead"><a class="btn btn-danger btn-lg" href="http://tinyurl.com/ignitestem18" target="_blank" role="button">Register for IgniteSTEM 2018 on 4/13/18</a></p>
 
           <a class="btn btn-danger" href="http://ignitestem.org/schedule.pdf" role="button">Schedule 2017</a>
           <!-- <a class="btn btn-danger" href="http://ignitestem.org/map.pdf" role="button">Map</a>
