--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
                   <li>
                     <span class="fa fa-dot-circle-o"></span>
-                    Facilitate your own Hackathon with a Do-It-Yourself kit, <a href="http://www.hackinabox.io/">"Hack-In-A-Box"</a>, and a <a href="http://hacker.fund">Hacker Fund</a> team member
+                    Facilitate your own Hackathon with a Do-It-Yourself kit, <a href="http://hackathons.hackinabox.tech">"Hack-In-A-Box"</a>, and a <a href="http://hacker.fund">Hacker Fund</a> team member
                   </li>
 
 
