--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <!--<li><a href="#tf-testimonials" class="page-scroll">Testimonials</a></li>-->
             <!-- <li><a href="https://ignitestem.typeform.com/to/G0jkFl" target="_blank">Register Now</a></li> -->
             
-            <li><a href="https://hackathons.hackinabox.tech/" target="_blank" class="page-scroll">Hack-In-A-Box</a></li>
+            <li><a href="http://hackathons.hackinabox.tech" target="_blank" class="page-scroll">Hack-In-A-Box</a></li>
             <li><a href="mailto:mdijkgraaf@princeton.edu" class="page-scroll">Contact</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
