Modified email addresses

--- a/index.html
+++ b/index.html
@@ -1068,7 +1068,7 @@
           <strong id="question_9">I want to get more involved!</strong><br/>
           <div id="collapse_faq_9">
            <p style="margin-left: 40px; text-indent: 40px;">
-             <a href="mailto:jcuffe@princeton.edu">Contact us</a> to get more involved and potentially be selected to be a team leader for the conference.</p>
+             <a href="mailto:mdijkgraaf@princeton.edu">Contact us</a> to get more involved and potentially be selected to be a team leader for the conference.</p>
            </div>
            <br/>
            <br/>
@@ -1146,7 +1146,7 @@
 
                   <p class="h3">Interested in partnering with us? </p>
 
-                  <a href="mailto:kjb3@princeton.edu" style="font-size: 20px">Get involved!</a>
+                  <a href="mailto:mdijkgraaf@princeton.edu" style="font-size: 20px">Get involved!</a>
 
                   </p>
 
