Fixed link and typo

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <strong>Maker Faires</strong> and <strong>Design Thinking</strong>
             to your students.
           </p>
-          <p class="lead"><a class="btn btn-danger btn-lg" href="http://tinyurl.com/ignitestem18" target="_blank" role="button">Register for IgniteSTEM 2018 on 4/13/18</a></p>
+          <p class="lead"><a class="btn btn-danger btn-lg" role="button">Stay tuned for Fall 2018 conferences!</a></p>
 
           <a class="btn btn-danger" href="http://ignitestem.org/schedule.pdf" role="button">Schedule 2017</a>
           <!-- <a class="btn btn-danger" href="http://ignitestem.org/map.pdf" role="button">Map</a>
@@ -164,7 +164,7 @@
                   <hr>
                   <div class="clearfix"></div>
                 </div>
-                <p class="intro">With significant backing from Princeton University, Wolfram Alpha, Google Education, and more, IgniteSTEM brings together thought leaders to make the <strong>“classroom of the future”</strong> a reality. Through international series of conferences, IgniteSTEM <strong>empowers educators</strong> and provides <strong>cutting edge ideas</strong> to disrupt STEM learning environments with <strong>education technology and project-based learning</strong>. Get to know <a href="http://ignitestem.org/whythismatters.pdf" id="whythismatterspdf">why this matters</a>.</p>
+                <p class="intro">With significant backing from Princeton University, Wolfram Alpha, Google Education, and more, IgniteSTEM brings together thought leaders to make the <strong>“classroom of the future”</strong> a reality. Through an international series of conferences, IgniteSTEM <strong>empowers educators</strong> and provides <strong>cutting edge ideas</strong> to disrupt STEM learning environments with <strong>education technology and project-based learning</strong>. Get to know <a href="http://ignitestem.org/whythismatters.pdf" id="whythismatterspdf">why this matters</a>.</p>
 
                 <ul class="about-list">
 
