--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@ layout: fullscreen
     </div>
     <div class="space"></div>
     <div class="row">
-      <a class="link" href="http://www.hackinabox.io/">
+      <a class="link" href="http://hackathons.hackinabox.tech/">
         <div class="col-md-3 col-sm-12 service">
           <i class="fa fa-archive"></i>
           <h4><strong>Hack in a box</strong></h4>
