Added sign-up link

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: fullscreen
       </p>
       <p class="lead"><a class="btn btn-danger btn-lg" role="button">Stay tuned for Fall 2018 conferences!</a></p>
 
-      <p class="lead"><a class="btn btn-danger btn-lg" href="https://goo.gl/forms/PZoPdqLAujZxOQNN2" role="button">IgniteSTEM Fall 2018 Application</a></p>
+      <p class="lead"><a class="btn btn-danger btn-lg" href="https://goo.gl/forms/PZoPdqLAujZxOQNN2" target="_blank" role="button">IgniteSTEM Fall 2018 Application</a></p>
 
       <a class="btn btn-danger" href="http://ignitestem.org/schedule.pdf" target="_blank" role="button">Schedule 2018</a>
       <!-- <a class="btn btn-danger" href="http://ignitestem.org/map.pdf" role="button">Map</a>
