--- a/index.html
+++ b/index.html
@@ -10,15 +10,14 @@ layout: fullscreen
         <strong>Maker Faires</strong> and <strong>Design Thinking</strong>
         to your students.
       </p>
-      <p class="lead"><a class="btn btn-danger btn-lg" role="button">Stay tuned for Fall 2018 conferences!</a></p>
 
       <p class="lead"><a class="btn btn-danger btn-lg" href="https://goo.gl/forms/PZoPdqLAujZxOQNN2" target="_blank" role="button">IgniteSTEM Fall 2018 Application</a></p>
 
-      <a class="btn btn-danger" href="http://ignitestem.org/schedule.pdf" target="_blank" role="button">Schedule 2018</a>
+      <a class="btn btn-danger" href="http://ignitestem.org/schedule.pdf" target="_blank" role="button">Example Schedule</a>
       <!-- <a class="btn btn-danger" href="http://ignitestem.org/map.pdf" role="button">Map</a>
       -->
       <a class="btn btn-danger" href="http://ignitestem.org/attendee.pdf" target="_blank" role="button">Attendees 2017</a>
-      <a class="btn btn-danger" href="http://ignitestem.org/student.pdf" target="_blank" role="button">Students 2017</a>
+      <!-- <a class="btn btn-danger" href="http://ignitestem.org/student.pdf" target="_blank" role="button">Students 2017</a> -->
       <p style="display:none" class="lead"><a class="btn btn-danger" href="http://ignitestem.org/student.pdf" role="button">Students</a></p>
 
     </div>
@@ -121,30 +120,42 @@ layout: fullscreen
                   <div class="section-title center">
                     <br>
                     <br>
-                    <h2><strong>2017-2018</strong> Conferences</h2>
+                    <h2><strong>2018-2019</strong> Conferences</h2>
                     <div class="line">
                       <hr>
                     </div><br>
                     <p>
                       <p class="intro">
+                        IgniteSTEM 2018 -- 12/8/18, Princeton NJ
+
+                      </p>
+                      <p class="intro">
+                        IgniteSTEM 2018 -- April 2019 TBD, NYC
+
+                      </p>
+                      <p class="intro">
+                        IgniteSTEM 2018 -- March 2019 TBD, Philadelphia
+
+                      </p>
+                      <!-- <p class="intro">
                         IgniteSTEM 2018 -- 4/13/17
 
                       </p>
                       <p class="intro">
                       IgniteSTEMxPrinceton -- 1/13/18
 
-                      </p>
+                      </p> -->
                       <!-- <br>
                       (<a href ="http://ignitestem.org/IgniteSTEMxPrinceton2016Schedule.pdf">Schedule</a>, Application [Closed])
 				  -->
-                      <p class="intro">
+                      <!-- <p class="intro">
                       	IgniteSTEM 2017 -- 4/13/17
 
                       </p>
                       <p class="intro">
                         IgniteSTEMx Stanford -- Spring 2018
 
-                      </p>
+                      </p> -->
                     </p>
                     </div>
                   </div>
@@ -736,6 +747,15 @@ layout: fullscreen
         <span class="fa fa-chevron-circle-right"></span>
         <strong id="question_4">How did you come up with the idea and who is involved?</strong><br/>
         <div id="collapse_faq_4">
+
+          <div class="thumbnail">
+              <img src="./assets/images/team/Max.jpg" alt="..." class="img-circle team-img">
+                  <div class="caption">
+                      <h3>Max Greenwald</h3>
+                      <p>Founder and CEO</p>
+                  </div>
+          </div>
+         
          <p style="margin-left: 40px; text-indent: 40px;">Always interested in promoting better education, Princeton E-club is excited to put on this student run education movement. Dismayed that we were not taught more hands on learning we wanted to create opportunities for other students to experience them too - and the best way to start is from the top-down with educators.</p>
          <p style="margin-left: 40px; text-indent: 40px;">We're so excited because by focusing on “doing rather than saying” we're actually providing real tangible impact to our attendees and helping students augment their education across the country. We hope our efforts will impact thousands of future engineering students that will come and enjoy Princeton - especially as our initial research shows that hands on learning early on leads to more women and minorities being involved in STEM. Our E-club has 150 members – coders, designers, engineers and dreamers - but 20 have gathered together to work on IgniteSTEM.</p>
          <p style="margin-left: 40px; text-indent: 40px;">We also have significant involvement from Princeton University (particularly the Keller Center and Council for Science and Technology).</p>
@@ -761,7 +781,7 @@ layout: fullscreen
       <strong id="question_9">I want to get more involved!</strong><br/>
       <div id="collapse_faq_9">
        <p style="margin-left: 40px; text-indent: 40px;">
-         <a href="mailto:mdijkgraaf@princeton.edu">Contact us</a> to get more involved and potentially be selected to be a team leader for the conference.</p>
+         <a href="mailto:kywu@princeton.edu">Contact us</a> to get more involved and potentially be selected to be a team leader for the conference.</p>
        </div>
        <br/>
        <br/>
