--- a/index.html
+++ b/index.html
@@ -747,13 +747,15 @@ layout: fullscreen
         <span class="fa fa-chevron-circle-right"></span>
         <strong id="question_4">How did you come up with the idea and who is involved?</strong><br/>
         <div id="collapse_faq_4">
-
-          <div class="thumbnail">
+          
+          <div class="item">
+            <div class="thumbnail">
               <img src="./assets/images/team/Max.jpg" alt="..." class="img-circle team-img">
                   <div class="caption">
                       <h3>Max Greenwald</h3>
                       <p>Founder and CEO</p>
                   </div>
+            </div>
           </div>
          
          <p style="margin-left: 40px; text-indent: 40px;">Always interested in promoting better education, Princeton E-club is excited to put on this student run education movement. Dismayed that we were not taught more hands on learning we wanted to create opportunities for other students to experience them too - and the best way to start is from the top-down with educators.</p>
