--- a/index.html
+++ b/index.html
@@ -747,16 +747,14 @@ layout: fullscreen
         <span class="fa fa-chevron-circle-right"></span>
         <strong id="question_4">How did you come up with the idea and who is involved?</strong><br/>
         <div id="collapse_faq_4">
-          
-          <div class="item">
+
             <div class="thumbnail">
               <img src="./assets/images/team/Max.jpg" alt="..." class="img-circle team-img">
-                  <div class="caption">
+                  <div class="caption text-center">
                       <h3>Max Greenwald</h3>
                       <p>Founder and CEO</p>
                   </div>
             </div>
-          </div>
          
          <p style="margin-left: 40px; text-indent: 40px;">Always interested in promoting better education, Princeton E-club is excited to put on this student run education movement. Dismayed that we were not taught more hands on learning we wanted to create opportunities for other students to experience them too - and the best way to start is from the top-down with educators.</p>
          <p style="margin-left: 40px; text-indent: 40px;">We're so excited because by focusing on “doing rather than saying” we're actually providing real tangible impact to our attendees and helping students augment their education across the country. We hope our efforts will impact thousands of future engineering students that will come and enjoy Princeton - especially as our initial research shows that hands on learning early on leads to more women and minorities being involved in STEM. Our E-club has 150 members – coders, designers, engineers and dreamers - but 20 have gathered together to work on IgniteSTEM.</p>
@@ -861,7 +859,7 @@ layout: fullscreen
 
               <p class="h3">Interested in partnering with us? </p>
 
-              <a href="mailto:mdijkgraaf@princeton.edu" style="font-size: 20px" onclick="gtag('event', 'Contact: Get Involved')">Get involved!</a>
+              <a href="mailto:kywu@princeton.edu" style="font-size: 20px" onclick="gtag('event', 'Contact: Get Involved')">Get involved!</a>
 
               </p>
 
