--- a/index.html
+++ b/index.html
@@ -748,7 +748,7 @@ layout: fullscreen
         <strong id="question_4">How did you come up with the idea and who is involved?</strong><br/>
         <div id="collapse_faq_4">
 
-            <div class="thumbnail">
+            <div class="thumbnail" style="border: none;">
               <img src="./assets/images/team/Max.jpg" alt="..." class="img-circle team-img">
                   <div class="caption text-center">
                       <h3>Max Greenwald</h3>
