--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@ layout: fullscreen
         to your students.
       </p>
 
-      <p class="lead"><a class="btn btn-danger btn-lg" href="https://goo.gl/forms/PZoPdqLAujZxOQNN2" target="_blank" role="button">IgniteSTEM Fall 2018 Application</a></p>
+      <p class="lead"><a class="btn btn-warning btn-lg" href="https://goo.gl/forms/PZoPdqLAujZxOQNN2" target="_blank" role="button">IgniteSTEM Fall 2018 Application</a></p>
 
-      <a class="btn btn-danger" href="http://ignitestem.org/schedule.pdf" target="_blank" role="button">Example Schedule</a>
+      <a class="btn btn-warning" href="http://ignitestem.org/schedule.pdf" target="_blank" role="button">Example Schedule</a>
       <!-- <a class="btn btn-danger" href="http://ignitestem.org/map.pdf" role="button">Map</a>
       -->
-      <a class="btn btn-danger" href="http://ignitestem.org/attendee.pdf" target="_blank" role="button">Attendees 2017</a>
+      <a class="btn btn-warning" href="http://ignitestem.org/attendee.pdf" target="_blank" role="button">Attendees 2017</a>
       <!-- <a class="btn btn-danger" href="http://ignitestem.org/student.pdf" target="_blank" role="button">Students 2017</a> -->
       <p style="display:none" class="lead"><a class="btn btn-danger" href="http://ignitestem.org/student.pdf" role="button">Students</a></p>
 
@@ -36,31 +36,21 @@ layout: fullscreen
         <ul class="about-list hidden-992">
           <div class="text-center">
             <div class="section-title center">
-              <h2><strong>2017-2018</strong> Conferences</h2>
+              <h2><strong>2018-2019</strong> Conferences</h2>
               <div class="line">
                 <hr>
               </div><br><p>
                       <p class="intro">
-                        IgniteSTEM 2018 -- 4/13/18
+                        IgniteSTEM 2018 -- 12/8/18, Princeton NJ
 
                       </p>
                       <p class="intro">
-                        IgniteSTEMx Hong Kong -- Spring 2018
+                        IgniteSTEM 2018 -- April 2019 TBD, NYC
 
                       </p>
                       <p class="intro">
-                      IgniteSTEMxPrinceton -- 1/13/18
+                        IgniteSTEM 2018 -- March 2019 TBD, Philadelphia
 
-                      </p>
-                      <!-- <br>
-                      (<a href ="http://ignitestem.org/IgniteSTEMxPrinceton2016Schedule.pdf">Schedule</a>, Application [Closed])
-          -->
-                      <p class="intro">
-                        IgniteSTEM 2017 -- 4/13/17
-
-                      </p>
-                      <p class="intro">
-                        IgniteSTEMx Stanford -- 5/1/17
                       </p>
                     </p>
               </div>
