--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@ layout: fullscreen
         to your students.
       </p>
 
-      <p class="lead"><a class="btn btn-warning btn-lg" href="https://goo.gl/forms/PZoPdqLAujZxOQNN2" target="_blank" role="button">IgniteSTEM Fall 2018 Application</a></p>
+      <p class="lead"><a class="btn btn-lg" href="https://goo.gl/forms/PZoPdqLAujZxOQNN2" target="_blank" role="button">IgniteSTEM Fall 2018 Application</a></p>
 
-      <a class="btn btn-warning" href="http://ignitestem.org/schedule.pdf" target="_blank" role="button">Example Schedule</a>
+      <a class="btn" href="http://ignitestem.org/schedule.pdf" target="_blank" role="button">Example Schedule</a>
       <!-- <a class="btn btn-danger" href="http://ignitestem.org/map.pdf" role="button">Map</a>
       -->
-      <a class="btn btn-warning" href="http://ignitestem.org/attendee.pdf" target="_blank" role="button">Attendees 2017</a>
+      <a class="btn" href="http://ignitestem.org/attendee.pdf" target="_blank" role="button">Attendees 2017</a>
       <!-- <a class="btn btn-danger" href="http://ignitestem.org/student.pdf" target="_blank" role="button">Students 2017</a> -->
       <p style="display:none" class="lead"><a class="btn btn-danger" href="http://ignitestem.org/student.pdf" role="button">Students</a></p>
 
