--- a/index.html
+++ b/index.html
@@ -740,7 +740,7 @@ layout: fullscreen
 
             <div class="thumbnail" style="border: none;">
               <img src="./assets/images/team/Max.jpg" alt="..." class="img-circle team-img">
-                  <div class="caption text-center">
+                  <div class="text-center" style="padding-top: 9px;">
                       <h3>Max Greenwald</h3>
                       <p>Founder and CEO</p>
                   </div>
