--- a/index.html
+++ b/index.html
@@ -740,9 +740,9 @@ layout: fullscreen
 
             <div class="thumbnail" style="border: none;">
               <img src="./assets/images/team/Max.jpg" alt="..." class="img-circle team-img">
-                  <div class="text-center" style="padding-top: 9px;">
+                  <div class="caption text-center">
                       <h3>Max Greenwald</h3>
-                      <p>Founder and CEO</p>
+                      <p style="margin-bottom: 9px;">Founder and CEO</p>
                   </div>
             </div>
          
