--- a/index.html
+++ b/index.html
@@ -739,7 +739,7 @@ layout: fullscreen
         <div id="collapse_faq_4">
 
             <!-- <div class="thumbnail" style="border: none;"> -->
-              <img src="./assets/images/team/Max.jpg" alt="..." class="img-circle team-img">
+              <img src="./assets/images/team/Max.jpg" alt="..." class="img-circle team-img center">
                   <div class="text-center">
                       <h3>Max Greenwald</h3>
                       <p>Founder and CEO</p>
