--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ layout: fullscreen
       <a class="btn" href="http://ignitestem.org/schedule.pdf" target="_blank" role="button">Example Schedule</a>
       <!-- <a class="btn btn-danger" href="http://ignitestem.org/map.pdf" role="button">Map</a>
       -->
-      <a class="btn" href="http://ignitestem.org/attendee.pdf" target="_blank" role="button">Attendees 2017</a>
+      <a class="btn" href="http://ignitestem.org/attendee.pdf" target="_blank" role="button">Attendees Packet 2017</a>
       <!-- <a class="btn btn-danger" href="http://ignitestem.org/student.pdf" target="_blank" role="button">Students 2017</a> -->
       <p style="display:none" class="lead"><a class="btn btn-danger" href="http://ignitestem.org/student.pdf" role="button">Students</a></p>
 
