Added Team Bios

--- a/index.html
+++ b/index.html
@@ -425,6 +425,8 @@ layout: fullscreen
                     <hr>
                 </div>
             </div>
+            
+            <div id="speakers" class="owl-carousel owl-theme row">
 
               <div class="item">
                     <div class="thumbnail">
@@ -729,11 +731,6 @@ layout: fullscreen
                     </div>
                 </div>
 
-
-
-               
-
-                                <!-- <div id="speakers" class="owl-carousel owl-theme row"> -->
                 <div class="item">
                     <div class="thumbnail">
                         <img src="./assets/images/New_Team/Olivia.jpg" alt="..." class="img-circle team-img">
@@ -757,7 +754,7 @@ layout: fullscreen
                 </div>
 
 
-            <!-- </div> -->
+            </div>
 
         </div>
     </div>
