--- a/index.html
+++ b/index.html
@@ -556,10 +556,10 @@ layout: fullscreen
 
                 <div class="item">
                     <div class="thumbnail">
-                        <img src="./assets/images/New_Team/GraceWei.jpg" alt="..." class="img-circle team-img">
+                        <img src="./assets/images/New_Team/HannahHuh.jpg" alt="..." class="img-circle team-img">
                         <div class="caption">
-                            <h3>Grace Wei</h3>
-                            <p>Sponsorship</p>
+                            <h3>Hannah Huh</h3>
+                            <p>Conference</p>
                         </div>
                     </div>
                 </div>
