--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: fullscreen
 <!-- Home Page -->
 <div id="tf-home" class="text-center">
   <div class="overlay">
-    <div class="content">
+    <div class="content" style="word-break: break-all">
       <h1>Welcome to <strong><span class="color">IgniteSTEM</span></strong></h1>
       <p class="lead">Bring <strong>Hackathons</strong>,
         <strong>Maker Faires</strong> and <strong>Design Thinking</strong>
