--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@ layout: fullscreen
 <!-- Home Page -->
 <div id="tf-home" class="text-center">
   <div class="overlay">
-    <div class="content" style="word-break: break-all">
+    <div class="content">
       <h1>Welcome to <strong><span class="color">IgniteSTEM</span></strong></h1>
       <p class="lead">Bring <strong>Hackathons</strong>,
         <strong>Maker Faires</strong> and <strong>Design Thinking</strong>
         to your students.
       </p>
 
-      <p class="lead"><a class="btn btn-lg" href="https://princetoneclub.typeform.com/to/Tln2mI" target="_blank" role="button">March 29th, 2019 Philadelphia Conference Application</a></p>
+      <p class="lead"><a class="btn btn-lg" style="word-wrap:break-word" href="https://princetoneclub.typeform.com/to/Tln2mI" target="_blank" role="button">March 29th, 2019 Philadelphia Conference Application</a></p>
 
       <p class="lead"><a class="btn btn-lg" href="https://princetoneclub.typeform.com/to/iKOzsM" target="_blank" role="button">April 25th, 2019 NYC Conference Application</a></p>
 
