--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: fullscreen
         to your students.
       </p>
 
-      <p class="lead"><a class="btn btn-lg" style="word-wrap:break-word" href="https://princetoneclub.typeform.com/to/Tln2mI" target="_blank" role="button">March 29th, 2019 Philadelphia Conference Application</a></p>
+      <p class="lead"><a class="btn btn-lg" href="https://princetoneclub.typeform.com/to/Tln2mI" target="_blank" role="button">March 29th, 2019 Philadelphia Conference Application</a></p>
 
       <p class="lead"><a class="btn btn-lg" href="https://princetoneclub.typeform.com/to/iKOzsM" target="_blank" role="button">April 25th, 2019 NYC Conference Application</a></p>
 
