--- a/index.html
+++ b/index.html
@@ -116,15 +116,11 @@ layout: fullscreen
                     </div><br>
                     <p>
                       <p class="intro">
-                        IgniteSTEM 2018 -- 12/8/18, Princeton NJ
+                        IgniteSTEM 2019 -- April 25th 2019, NYC
 
                       </p>
                       <p class="intro">
-                        IgniteSTEM 2018 -- April 2019 TBD, NYC
-
-                      </p>
-                      <p class="intro">
-                        IgniteSTEM 2018 -- March 2019 TBD, Philadelphia
+                        IgniteSTEM 2019 -- March 29th 2019, Philadelphia
 
                       </p>
                       <!-- <p class="intro">
