Removed bios temporarily

--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@ layout: fullscreen
                         <div class="caption">
                             <h3>Max Greenwald</h3>
                             <p>Founder and Former CEO</p>
-                            <p>Max is a Computer Science and Public Policy alumni from Princeton. He is so proud of what this team has accomplished in such a short time, and can't wait to help every K12 student in the country attend a project based learning event in the next 5 years.</p>
+                            <!-- <p>Max is a Computer Science and Public Policy alumni from Princeton. He is so proud of what this team has accomplished in such a short time, and can't wait to help every K12 student in the country attend a project based learning event in the next 5 years.</p> -->
                         </div>
                     </div>
                 </div>
@@ -438,7 +438,7 @@ layout: fullscreen
                         <div class="caption">
                             <h3>Kevin Wu</h3>
                             <p>Director</p>
-                            <p>Kevin Wu is a senior from Dallas, Texas. He is majoring in Operations Research and Financial Engineering, and he is excited to be a part of IgniteSTEM to promote STEM education!</p>
+                            <!-- <p>Kevin Wu is a senior from Dallas, Texas. He is majoring in Operations Research and Financial Engineering, and he is excited to be a part of IgniteSTEM to promote STEM education!</p> -->
                         </div>
                     </div>
                 </div>
@@ -472,7 +472,7 @@ layout: fullscreen
                         <div class="caption">
                             <h3>Lois Dzebissov</h3>
                             <p>Chief of Design</p>
-                            <p>Lois is a senior in Electrical Engineering with a certificate in Computer Science. She is a strong supporter of hackathons and hands-on learning, and hopes to help bring them to the classroom.</p>
+                            <!-- <p>Lois is a senior in Electrical Engineering with a certificate in Computer Science. She is a strong supporter of hackathons and hands-on learning, and hopes to help bring them to the classroom.</p> -->
                         </div>
                     </div>
                 </div>
@@ -707,7 +707,7 @@ layout: fullscreen
                         <div class="caption">
                             <h3>James Cuffe</h3>
                             <p>Advisory Board</p>
-                            <p>Jamie is a senior in the Computer Science department at Princeton with certificates in Statistics and Machine Learning as well as Robotics and Intelligent Systems. He is excited to bring hackathons, design thinking, and maker movements to thousands of public schools.</p>
+                            <!-- <p>Jamie is a senior in the Computer Science department at Princeton with certificates in Statistics and Machine Learning as well as Robotics and Intelligent Systems. He is excited to bring hackathons, design thinking, and maker movements to thousands of public schools.</p> -->
                         </div>
                     </div>
                 </div>
@@ -718,7 +718,7 @@ layout: fullscreen
                         <div class="caption">
                             <h3>Kevin Bradicich</h3>
                             <p>Advisory Board</p>
-                            <p>Kevin studied Computer Science and had a certificate in Engineering and Management Systems. An alumni from Connecticut, Kevin is excited to help spread and implement EdTech to make education more interactive, accessible, and effective. Outside of IgniteSTEM, Kevin enjoys going on runs and learning about all types of music.</p>
+                            <!-- <p>Kevin studied Computer Science and had a certificate in Engineering and Management Systems. An alumni from Connecticut, Kevin is excited to help spread and implement EdTech to make education more interactive, accessible, and effective. Outside of IgniteSTEM, Kevin enjoys going on runs and learning about all types of music.</p> -->
                         </div>
                     </div>
                 </div>
@@ -729,7 +729,7 @@ layout: fullscreen
                         <div class="caption">
                             <h3>Olivia Zhang</h3>
                             <p>Advisory Board</p>
-                            <p>Olivia is a junior in the Copmuter Science department at Princeton, with additional interests in Physics and History. She is from Northern Virginia and enjoys figure skating, reading, and baking with friends in her free time. After having a great experience with hands-on tech learning and hackathons in school, she's excited to be contribute to IgniteSTEM's mission and enable more and more students to have the same benefits.</p>
+                            <!-- <p>Olivia is a junior in the Copmuter Science department at Princeton, with additional interests in Physics and History. She is from Northern Virginia and enjoys figure skating, reading, and baking with friends in her free time. After having a great experience with hands-on tech learning and hackathons in school, she's excited to be contribute to IgniteSTEM's mission and enable more and more students to have the same benefits.</p> -->
                         </div>
                     </div>
                 </div>
@@ -740,7 +740,7 @@ layout: fullscreen
                         <div class="caption">
                             <h3>Matthijs Dijkgraaf</h3>
                             <p>Advisory Board</p>
-                            <p>Matthijs is a junior in the ORFE department at Princeton with certificates in Computer Science and Astrophysics. He grew up in both Amsterdam and Princeton while playing ultimate and soccer, and he is really excited to bring education to the next level by promoting hackathons and design thinking.</p>
+                            <!-- <p>Matthijs is a junior in the ORFE department at Princeton with certificates in Computer Science and Astrophysics. He grew up in both Amsterdam and Princeton while playing ultimate and soccer, and he is really excited to bring education to the next level by promoting hackathons and design thinking.</p> -->
                         </div>
                     </div>
                 </div>
