Added NYC Schedule

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@ layout: fullscreen
 
       <p class="lead"><a class="btn btn-lg" href="https://princetoneclub.typeform.com/to/kwPZUS" target="_blank" role="button">$2000 Teacher's Grant Application for Innovation in the Classroom</a></p>
 
+      <a class="btn" href="http://ignitestem.org/nycschedule.pdf" target="_blank" role="button">NYC 2019 Schedule</a>
+
       <a class="btn" href="http://ignitestem.org/schedule.pdf" target="_blank" role="button">Example Schedule</a>
       <!-- <a class="btn btn-danger" href="http://ignitestem.org/map.pdf" role="button">Map</a>
       -->
